--- a/triggers/test-trigger.yaml
+++ b/triggers/test-trigger.yaml
@@ -4,7 +4,7 @@ metadata:
   name: testtrigger-example
   namespace: testkube
 spec:
-  resource: pod
+  resource: deployment
   resourceSelector:
     labelSelector:
       matchLabels:
