--- a/deployment/foass-deployment.yaml
+++ b/deployment/foass-deployment.yaml
@@ -1,34 +1,46 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: foass-service
-  namespace: foass
-spec:
-  type: NodePort
-  ports:
-  - port: 3000
-  selector:
-    app: foass-app
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: foass-deployment
   namespace: foass
   labels:
-    app: foass-app
+    environment: production
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: foass-app
+      app: foass-pod
   template:
     metadata:
       labels:
-        app: foass-app
+        app: foass-pod
     spec:
       containers:
       - name: foass
         image: samaarah1docker/foass:latest
         ports:
-        - containerPort: 80
+        - name: http
+          containerPort: 5000
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: foass-service
+  namespace: foass
+spec:
+  selector:
+    app: foass-pod
+  ports:
+  - protocol: TCP
+    port: 5000
+    targetPort: http
+---
+apiVersion: v1
+kind: Pod 
+metadata: 
+  name: foass-pod
+  namespace: foass
+spec:
+  containers:
+  - name: foass
+    image: samaarah1docker/foass:latest
