--- a/triggers/test-trigger.yaml
+++ b/triggers/test-trigger.yaml
@@ -8,13 +8,11 @@ spec:
   resourceSelector:
     labelSelector:
       matchLabels:
-        app: foass-app
-  event: deployment_scale_update
+        environment: production
+  event: deployment-scale-update
   conditionSpec:
     timeout: 100
     conditions:
-    - type: Progressing
-      status: "True"
     - type: Available
       status: "True"
   action: run
